--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -16,7 +16,7 @@ services:
     ports:
       - '3002:3001'
     networks:
-      - sofia_chat_network
+      - converxa_network
     volumes:
       - ./uploads:/app/uploads
       - ./logs/blue:/app/logs
@@ -42,7 +42,7 @@ services:
     ports:
       - '3003:3001'
     networks:
-      - sofia_chat_network
+      - converxa_network
     volumes:
       - ./uploads:/app/uploads
       - ./logs/green:/app/logs
@@ -56,5 +56,5 @@ services:
       start_period: 5s
 
 networks:
-  sofia_chat_network:
+  converxa_network:
     driver: bridge
