--- a/.github/workflows/deploy-development.yaml
+++ b/.github/workflows/deploy-development.yaml
@@ -1,4 +1,4 @@
-name: Blue-Green Production Deployment for Sofia Chat Backend
+name: Blue-Green Production Deployment for Converxa Chat Backend
 
 on:
   push:
@@ -234,7 +234,7 @@ jobs:
             fi
 
             echo -n "Producción: "
-            if curl -sf https://back.sofiachat.com/api/health >/dev/null 2>&1; then
+            if curl -sf https://back.converxa.com/api/health >/dev/null 2>&1; then
                 echo "✅ SALUDABLE"
             else
                 echo "❌ NO SALUDABLE"
