--- a/nginx/sites-available/internal-backend.conf
+++ b/nginx/sites-available/internal-backend.conf
@@ -1,12 +1,12 @@
-# Configuración para dominio interno de pruebas (internal-dev-sofia-chat.sofiacall.com)
+# Configuración para dominio interno de pruebas (internal-dev-converxa-chat.converxacall.com)
 # Este dominio apunta al slot inactivo para pruebas antes del switch
 server {
     listen 443 ssl http2;
-    server_name internal-dev-sofia-chat.sofiacall.com;
+    server_name internal-dev-converxa-chat.converxacall.com;
 
     # Certificados SSL (deben configurarse manualmente)
-    ssl_certificate /etc/letsencrypt/live/internal-dev-sofia-chat.sofiacall.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/internal-dev-sofia-chat.sofiacall.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/internal-dev-converxa-chat.converxacall.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/internal-dev-converxa-chat.converxacall.com/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
