refactor: Optimizar secrets - solo valores sensibles en secrets, resto hardcoded en workflow

--- a/.github/workflows/deploy-development.yaml
+++ b/.github/workflows/deploy-development.yaml
@@ -105,39 +105,39 @@ jobs:
             cat > .env << 'ENV_EOF'
             NODE_ENV=production
             LOG_LEVEL=production
-            TYPEORM_HOST=${{ secrets.TYPEORM_HOST }}
-            TYPEORM_PORT=${{ secrets.TYPEORM_PORT }}
-            TYPEORM_USERNAME=${{ secrets.TYPEORM_USERNAME }}
-            TYPEORM_PASSWORD=${{ secrets.TYPEORM_PASSWORD }}
-            TYPEORM_DB_NAME=${{ secrets.TYPEORM_DB_NAME }}
-            JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }}
-            JWT_SECRET_KEY_REFRESH=${{ secrets.JWT_SECRET_KEY_REFRESH }}
-            NODEMAILER_HOST=${{ secrets.NODEMAILER_HOST }}
-            NODEMAILER_PORT=${{ secrets.NODEMAILER_PORT }}
-            NODEMAILER_USER=${{ secrets.NODEMAILER_USER }}
-            NODEMAILER_PASS=${{ secrets.NODEMAILER_PASS }}
-            NODEMAILER_FROM=${{ secrets.NODEMAILER_FROM }}
-            URL_FILES=${{ secrets.URL_FILES }}
-            URL_WSS=${{ secrets.URL_WSS }}
-            URL_WEBHOOK_WA=${{ secrets.URL_WEBHOOK_WA }}
-            OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}
-            FACEBOOK_APP_ID=${{ secrets.FACEBOOK_APP_ID }}
-            FACEBOOK_APP_SECRET=${{ secrets.FACEBOOK_APP_SECRET }}
-            FACEBOOK_WEBHOOK_SECRET=${{ secrets.FACEBOOK_WEBHOOK_SECRET }}
-            FACEBOOK_GRAPH_API=${{ secrets.FACEBOOK_GRAPH_API }}
-            APP_URL=${{ secrets.APP_URL }}
-            URL_FRONTEND=${{ secrets.URL_FRONTEND }}
-            MAILGUN_API_KEY=${{ secrets.MAILGUN_API_KEY }}
-            MAILGUN_DOMAIN=${{ secrets.MAILGUN_DOMAIN }}
-            MAILGUN_FROM=${{ secrets.MAILGUN_FROM }}
-            SLACK_CLIENT_ID=${{ secrets.SLACK_CLIENT_ID }}
-            SLACK_CLIENT_SECRET=${{ secrets.SLACK_CLIENT_SECRET }}
-            SLACK_REDIRECT_URI=${{ secrets.SLACK_REDIRECT_URI }}
-            VOYAGE_API_KEY=${{ secrets.VOYAGE_API_KEY }}
-            CLAUDE_API_KEY=${{ secrets.CLAUDE_API_KEY }}
-            GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
-            GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}
-            CUSTOM_PLAN_REQUEST_RECIPIENT_EMAIL=${{ secrets.CUSTOM_PLAN_REQUEST_RECIPIENT_EMAIL }}
+            TYPEORM_HOST=converxa-prod-db-do-user-23433311-0.k.db.ondigitalocean.com
+            TYPEORM_PORT=25060
+            TYPEORM_USERNAME=doadmin
+            TYPEORM_PASSWORD=${{ secrets.PROD_TYPEORM_PASSWORD }}
+            TYPEORM_DB_NAME=defaultdb
+            JWT_SECRET_KEY=${{ secrets.PROD_JWT_SECRET_KEY }}
+            JWT_SECRET_KEY_REFRESH=${{ secrets.PROD_JWT_SECRET_KEY_REFRESH }}
+            NODEMAILER_HOST=smtp.gmail.com
+            NODEMAILER_PORT=587
+            NODEMAILER_USER=${{ secrets.PROD_NODEMAILER_USER }}
+            NODEMAILER_PASS=${{ secrets.PROD_NODEMAILER_PASS }}
+            NODEMAILER_FROM=noreply@converxa.com
+            URL_FILES=https://back.converxa.com/files
+            URL_WSS=wss://back.converxa.com
+            URL_WEBHOOK_WA=https://back.converxa.com/webhook/whatsapp
+            OPENAI_API_KEY=${{ secrets.PROD_OPENAI_API_KEY }}
+            FACEBOOK_APP_ID=your-facebook-app-id
+            FACEBOOK_APP_SECRET=${{ secrets.PROD_FACEBOOK_APP_SECRET }}
+            FACEBOOK_WEBHOOK_SECRET=${{ secrets.PROD_FACEBOOK_WEBHOOK_SECRET }}
+            FACEBOOK_GRAPH_API=https://graph.facebook.com/v18.0
+            APP_URL=https://back.converxa.com
+            URL_FRONTEND=https://converxa.com
+            MAILGUN_API_KEY=${{ secrets.PROD_MAILGUN_API_KEY }}
+            MAILGUN_DOMAIN=converxa.com
+            MAILGUN_FROM=noreply@converxa.com
+            SLACK_CLIENT_ID=your-slack-client-id
+            SLACK_CLIENT_SECRET=your-slack-client-secret
+            SLACK_REDIRECT_URI=https://back.converxa.com/auth/slack/callback
+            VOYAGE_API_KEY=${{ secrets.PROD_VOYAGE_API_KEY }}
+            CLAUDE_API_KEY=${{ secrets.PROD_CLAUDE_API_KEY }}
+            GOOGLE_CLIENT_ID=your-google-client-id
+            GOOGLE_CLIENT_SECRET=your-google-client-secret
+            CUSTOM_PLAN_REQUEST_RECIPIENT_EMAIL=admin@converxa.com
             ENV_EOF
 
             # Ensure pgvector is installed
