--- a/.github/workflows/deploy-dev-blue-green.yml
+++ b/.github/workflows/deploy-dev-blue-green.yml
@@ -49,18 +49,18 @@ env:
   # Email configuration
   NODEMAILER_HOST: smtp.gmail.com
   NODEMAILER_PORT: 587
-  NODEMAILER_FROM: noreply@converxa.com
+  NODEMAILER_FROM: noreply@converxa.net
 
   # External APIs
   FACEBOOK_GRAPH_API: https://graph.facebook.com/v18.0
   FACEBOOK_APP_ID: your-facebook-app-id
 
   # Mailgun
-  MAILGUN_DOMAIN: converxa.com
-  MAILGUN_FROM: noreply@converxa.com
+  MAILGUN_DOMAIN: converxa.net
+  MAILGUN_FROM: noreply@converxa.net
 
   # Other
-  CUSTOM_PLAN_REQUEST_RECIPIENT_EMAIL: admin@converxa.com
+  CUSTOM_PLAN_REQUEST_RECIPIENT_EMAIL: admin@converxa.net
 
 jobs:
   blue-green-deployment:
@@ -244,7 +244,7 @@ jobs:
             fi
 
             echo -n "Producción: "
-            if curl -sf https://dev-converxa.converxa.com/api/health >/dev/null 2>&1; then
+            if curl -sf https://dev-converxa.converxa.net/api/health >/dev/null 2>&1; then
                 echo "✅ SALUDABLE"
             else
                 echo "❌ NO SALUDABLE"
@@ -258,10 +258,10 @@ jobs:
             echo "  - Limpiar: /opt/converxa-chat/blue-green-simple.sh cleanup"
             echo ""
             echo "🌐 URLs de prueba:"
-            echo "  - Blue (3002): http://dev-converxa.converxa.com:3002/api/health"
-            echo "  - Green (3003): http://dev-converxa.converxa.com:3003/api/health"
-            echo "  - Producción: https://dev-converxa.converxa.com/api/health"
-            echo "  - Pruebas internas: https://internal-dev-converxa.converxa.com/api/health"
+            echo "  - Blue (3002): http://dev-converxa.converxa.net:3002/api/health"
+            echo "  - Green (3003): http://dev-converxa.converxa.net:3003/api/health"
+            echo "  - Producción: https://dev-converxa.converxa.net/api/health"
+            echo "  - Pruebas internas: https://internal-dev-converxa.converxa.net/api/health"
             echo ""
             echo "📋 Aliases disponibles en el servidor:"
             echo "  - bg-status, bg-deploy, bg-switch, bg-rollback, bg-cleanup"
