--- a/.github/workflows/deploy-dev-blue-green.yml
+++ b/.github/workflows/deploy-dev-blue-green.yml
@@ -244,7 +244,7 @@ jobs:
             fi
 
             echo -n "Producción: "
-            if curl -sf https://dev-converxa.converxa.net/api/health >/dev/null 2>&1; then
+            if curl -sf https://back-chat.converxa.net/api/health >/dev/null 2>&1; then
                 echo "✅ SALUDABLE"
             else
                 echo "❌ NO SALUDABLE"
@@ -258,10 +258,10 @@ jobs:
             echo "  - Limpiar: /opt/converxa-chat/blue-green-simple.sh cleanup"
             echo ""
             echo "🌐 URLs de prueba:"
-            echo "  - Blue (3002): http://dev-converxa.converxa.net:3002/api/health"
-            echo "  - Green (3003): http://dev-converxa.converxa.net:3003/api/health"
-            echo "  - Producción: https://dev-converxa.converxa.net/api/health"
-            echo "  - Pruebas internas: https://internal-dev-converxa.converxa.net/api/health"
+            echo "  - Blue (3002): http://back-chat.converxa.net:3002/api/health"
+            echo "  - Green (3003): http://back-chat.converxa.net:3003/api/health"
+            echo "  - Producción: https://back-chat.converxa.net/api/health"
+            echo "  - Pruebas internas: https://internal-back-chat.converxa.net/api/health"
             echo ""
             echo "📋 Aliases disponibles en el servidor:"
             echo "  - bg-status, bg-deploy, bg-switch, bg-rollback, bg-cleanup"
